--- a/wordpress/wp-content/themes/develop/assets/css/reaction.css
+++ b/wordpress/wp-content/themes/develop/assets/css/reaction.css
@@ -3,87 +3,25 @@
 }
 
 .emoji {
-	width: 30px;
-	height: 30px;
+	width: 20px;
+	height: 20px;
 	border-radius: 50%;
-	margin-right: 15px;
 	cursor: pointer;
 }
 
-.emoji i {
-	margin: 8px 5px 5px 8px;
-	color: #000000;
+.emoji i:hover {
+	color: #548dff;
 }
 
-.emoji:hover {
-	background-color: #ffffff;
-	border-style: solid;
-	border-color: coral;
-}
-
-.emoji__like {
-	background: #548dff;
-}
-
-.emoji__love {
-	background: #f55064;
-}
-
-.emoji__haha {
-	background: #ffda6a;
-}
-
-.emoji__wow {
-	background: #ffda6a;
-}
-
-.emoji__huhu {
-	background: #ffda6a;
-}
-
-.emoji__angry {
-	background: #d5234c;
-}
-
-.emoji__like::after {
+.emoji__like:after {
 	font-size: 11px !important;
 	margin-left: 3px;
-	/*content*/: 'Like';
-}
-
-.emoji__love::after {
-	font-size: 11px !important;
-	margin-left: 3px;
-	/*content*/: 'Love';
-}
-
-.emoji__haha::after {
-	font-size: 11px !important;
-	margin-left: 2px;
-	/*content*/: 'Haha';
-}
-
-.emoji__wow::after {
-	font-size: 11px !important;
-	/*content*/: 'Wow';
-}
-
-.emoji__huhu::after {
-	font-size: 11px !important;
-	/*content*/: 'Huhu';
-}
-
-.emoji__angry::after {
-	font-size: 11px !important;
-	/*content*/: 'Angry';
 }
 
 .emoji__popup {
 	cursor: pointer;
 }
 
-.liked {
-	background-color: #ffffff;
-	border-style: solid;
-	border-color: coral;
+.liked i {
+	color: #548dff;
 }
