--- a/wordpress/wp-content/themes/develop/assets/css/category.css
+++ b/wordpress/wp-content/themes/develop/assets/css/category.css
@@ -715,7 +715,7 @@ section
 }
 .section_tags
 {
-	padding-right: 94px;
+	padding-right: 74px;
 }
 .section_tags ul li
 {
@@ -758,7 +758,6 @@ section
 	-o-transform: translateY(-50%);
 	transform: translateY(-50%);
 	right: 0;
-	width: 55px;
 }
 .section_panel_more ul li
 {
@@ -1072,7 +1071,7 @@ section
 }
 .load_more_button
 {
-	width: 118px;
+	width: 20%;
 	height: 36px;
 	background: transparent;
 	border: solid 1px #d7d7d7;
