--- a/wordpress/wp-content/themes/develop/assets/css/custom.css
+++ b/wordpress/wp-content/themes/develop/assets/css/custom.css
@@ -1,6 +1,17 @@
+.hide {
+    display: none;
+}
+
 hr {
   margin-top: 1rem;
   margin-bottom: 1rem;
   border: 0;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+/* Reaction Icon */
+.fa-thumbs-up {
+    cursor: pointer;
+}
+.fa-thumbs-up-active {
+    color: #218df2;
 }
