--- a/wordpress/wp-content/themes/develop/assets/css/custom.css
+++ b/wordpress/wp-content/themes/develop/assets/css/custom.css
@@ -8,10 +8,46 @@ hr {
   border: 0;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
+
 /* Toggle class */
 .cursor-pointer {
     cursor: pointer;
 }
 .toggle-active, .text-light-blue {
     color: #218df2 !important;
+}
+
+.footer-list {
+    text-align: justify;
+    margin-left: 15.5rem;
+}
+/*Horizontal Ipad (1024 x 768)*/
+@media screen and (max-width: 1024px){
+    .footer-list {
+        margin-left: 9.5rem;
+    }
+}
+/*Vertical Ipad (768 x 1024)*/
+@media screen and (max-width: 768px){
+    .footer-list {
+        margin-left: 6.5rem;
+    }
+}
+/*Small tablet(480 x 640)*/
+@media screen and (max-width: 480px){
+    .footer-list {
+        margin-left: 9.5rem;
+    }
+}
+/*Iphone(480 x 640)*/
+@media screen and (max-width: 320px){
+    .footer-list {
+        margin-left: 4.5rem;
+    }
+}
+/*Small Smart phone*/
+@media screen and (max-width: 240px){
+    .footer-list {
+        margin-left: 2.5rem;
+    }
 }
