--- a/wordpress/wp-content/themes/develop/assets/css/post.css
+++ b/wordpress/wp-content/themes/develop/assets/css/post.css
@@ -625,6 +625,7 @@ section
 	background: rgba(255,255,255,0.2);
 	border-radius: 14px;
 	text-align: center;
+    width: auto;
 }
 .post_category a
 {
