--- a/wordpress/wp-content/themes/develop/assets/css/custom.css
+++ b/wordpress/wp-content/themes/develop/assets/css/custom.css
@@ -103,3 +103,8 @@ hr {
     padding: 0;
     margin-right: 40px;
 }
+
+.noscroll {
+  background: rgba(0,0,0,0.75);
+  box-shadow: 0px 5px 5px rgba(0,0,0,0.1);
+}
