--- a/wordpress/wp-content/themes/develop/assets/css/custom.css
+++ b/wordpress/wp-content/themes/develop/assets/css/custom.css
@@ -108,3 +108,8 @@ hr {
   background: rgba(0,0,0,0.75);
   box-shadow: 0px 5px 5px rgba(0,0,0,0.1);
 }
+
+.home_content.contact {
+    left: 50%;
+    max-width: 100%;
+}
